CHANGES
*******

0.7 (unreleased)
================

- ``dump_json`` and ``load_json`` directives. This lets you
  automatically convert an object going to a response to JSON, and
  converts JSON coming in as a request body from JSON to an
  object. See http://morepath.readthedocs.org/en/latest/json.html for
  more information.

- **Breaking change**. The arguments to the ``render`` function have
  changed. This is a function you can pass to a view directive.  The
  render function now takes a second argument, the request. You need
  to update your render functions to take this into account. This only
  affects code that supplies an explicit ``render`` function to the
  ``view``, ``json`` and ``html`` directives, and since not a lot of
  those functions exist, the impact is expected to be minimal.

- Minor improvement in docstrings.

0.6 (2014-09-08)
================

- Fix documentation on the ``with`` statement; it was not using the local
  ``view`` variable correctly.

- Add #morepath IRC channel to the community docs.

- Named mounts. Instead of referring to the app class when
  constructing a link to an object in an application mounted
  elsewhere, you can put in the name of the mount. The name of the
  mount can be given explicitly in the mount directive but defaults to
  the mount path.

  This helps when an application is mounted several times and needs to
  generate different links depending on where it's mounted; by
  referring to the application by name this is loosely coupled and
  will work no matter what application is mounted under that name.

  This also helps when linking to an application that may or may not
  be present; instead of doing an import while looking for
  ``ImportError``, you can try to construct the link and you'll get a
  ``LinkError`` exception if the application is not there. Though this
  still assumes you can import the model class of what you're linking
  to.

  (see issue #197)
